tests/paczka1/small_fuzzy/35347913.err
Error in line 7: lmOItKNoKlw S170 21,0
Error in line 11: lmOItKNoKlw A613 73,2
